--- a/style.less
+++ b/style.less
@@ -217,7 +217,7 @@ footer {
   }
 }
 
-@media only screen and (min-width: 620px) {
+@media only screen and (min-width: 640px) {
   body {
     display: grid;
     place-content: center;
@@ -225,12 +225,13 @@ footer {
   }
   
   main {
-    max-width: 580px;
+    max-width: 600px;
   }
   
   .content {
     .logo {
       width: 86px;
+      margin-block-end: 4.5rem;
     }
     
     .section-title {
@@ -247,6 +248,7 @@ footer {
   
   
   form {
+    padding: 0;
     display: flex;
     align-items: start;
     gap: 1.5rem;
