--- a/style.less
+++ b/style.less
@@ -242,7 +242,7 @@ footer {
     .text {
       font-size: 1.8rem;
       line-height: 1.2;
-      margin-block: 1.3rem;
+      margin-block: 1.5rem 3rem;
     }
   }
   
@@ -257,14 +257,18 @@ footer {
       flex: 1;
       
       input {
-        padding: 1.5rem 3rem;  
+        padding: 2rem 3rem;  
       }
     }
     
     button {
       margin: 0;
-      padding: 1.5rem 5rem;
+      padding: 2rem 5.5rem;
       width: max-content;
     }
+  }
+  
+  .img-holder {
+    margin-top: 6.5rem;
   }
 }
